site/web/app/themes/host/assets/css/main.css
/* ... */
.box--fg-grape h2:first-line,
.box--fg-grape h2.plain span, .box--fg-grape .h2:first-line,
.box--fg-grape .h2.plain span {
  color: #b455a0;
}

.box--fg-grape h3:first-line,
.box--fg-grape h3.plain span, .box--fg-grape .h3:first-line,
.box--fg-grape .h3.plain span {
  color: #b455a0;
}

.box--fg-grape h4:first-line,
.box--fg-grape h4.plain span, .box--fg-grape .h4:first-line,
.box--fg-grape .h4.plain span {
  color: #b455a0;
}

.js-flyout {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.js-flyout__parent {
  position: relative;
}

.js-flyout__button[class] {
  position: absolute;
  top: 50%;
  height: 50%;
  max-height: 100%;
  width: auto;
  min-width: 0;
  padding: 0.625rem;
  transform: translateY(-50%);
  border-radius: 0;
  background: #00b9b5;
}

.js-flyout__button[class]:hover {
  background: #008683;
}

.js-flyout__button[class]:hover .svg-icon {
  fill: #00b9b5;
}

.js-flyout__button[class].btn--outline:hover {
  background: transparent;
  border: solid 1px #00b9b5;
  color: #00b9b5;
}

.js-flyout__button[class] .svg-icon {
  width: 0.9375rem;
  height: 1.4375rem;
  fill: #fff;
}

.js-flyout--active {
  transition: transform 400ms;
}

.js-flyout--active .svg-icon {
  transition: transform 200ms 200ms;
}

.js-flyout--left.js-flyout--active {
  right: 100%;
}

.js-flyout--left .js-flyout__button {
  left: 100%;
}

.js-flyout--left .js-flyout__button .svg-icon {
  transform: rotateY(180deg);
}

.js-flyout--left.js-flyout--open {
  transform: translate(100%, -50%);
}

.js-flyout--left.js-flyout--open .svg-icon {
  transform: rotateY(0);
}

.js-flyout--right.js-flyout--active {
  left: 100%;
}

.js-flyout--right .js-flyout__button {
  right: 100%;
}

.js-flyout--right .js-flyout__button .svg-icon {
  transform: rotateY(0);
}

.js-flyout--right.js-flyout--open {
  transform: translate(-100%, -50%);
}

.js-flyout--right.js-flyout--open .svg-icon {
  transform: rotateY(180deg);
}

.slideshow {
  position: relative;
  overflow: hidden;
}

.slideshow ul,
.slideshow ol {
  margin: 0;
  list-style: none inside;
}

.slideshow__list {
  overflow: hidden;
}

.slideshow__item {
  background: transparent none no-repeat center center/cover;
}

.slideshow__item + .slideshow__item {
  display: none;
}

.js-slideshow--active .slideshow__item {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  transform: translateX(0);
  transition: transform 350ms;
}

.slideshow__item.js-slideshow--outside {
  transition: none;
}

.slideshow__image {
  opacity: 0.000001;
}

.slideshow-pagination--dots {
  position: absolute;
  bottom: 0.9375rem;
  left: 50%;
  transform: translateX(-50%);
}

.slideshow-pagination--dots li {
  display: inline-block;
  margin: 0 0.25rem;
}

.slideshow-pagination--dots button[class] {
  height: 0.8125rem;
  width: 0.8125rem;
  min-width: 0;
  padding: 0;
  transition: background 350ms;
  border: 2px solid #fff;
  background: rgba(255, 255, 255, 0);
}

.slideshow-pagination--dots button[class]:hover, .slideshow-pagination--dots button[class]:focus {
  background-color: rgba(255, 255, 255, 0.5);
  outline: none;
}

.slideshow-pagination--dots button[class].-current {
  background: white;
}

.slideshow-pagination--dots button[class].-current:hover, .slideshow-pagination--dots button[class].-current:focus {
  background-color: rgba(255, 255, 255, 0.5);
  outline: none;
}

.slideshow-pagination--pn .slideshow-pagination__button {
  position: absolute;
  top: 50%;
  padding: 0.625rem;
  height: 100%;
  min-width: 0;
  margin: 0;
  transform: translateY(-50%) scale(0);
  transition: background 200ms, opacity    350ms, transform  0ms 350ms;
  border-radius: 0;
  background: rgba(255, 255, 255, 0);
  opacity: 0;
}

.slideshow-pagination--pn .slideshow-pagination__button:hover, .slideshow-pagination--pn .slideshow-pagination__button:focus {
  background: rgba(255, 255, 255, 0.15);
  outline-color: #999;
}

.slideshow-pagination--pn .slideshow-pagination__button:hover .svg-icon, .slideshow-pagination--pn .slideshow-pagination__button:focus .svg-icon {
  opacity: 1;
  transform: translateX(-0.1875rem);
}

.slideshow-pagination--pn .slideshow-pagination__button.-show {
  transform: translateY(-50%) scale(1);
  transition-delay: 0ms, 0ms, 0ms;
  opacity: 1;
}

.slideshow-pagination--pn .slideshow-pagination__button .svg-icon {
  transition: all 200ms;
  opacity: 0.75;
}

.slideshow-pagination--pn .slideshow-pagination__button--next {
  right: 0;
}

.slideshow-pagination--pn .slideshow-pagination__button--next .svg-icon {
  transform: scaleX(-1);
}

.slideshow-pagination--pn .slideshow-pagination__button--next:hover .svg-icon, .slideshow-pagination--pn .slideshow-pagination__button--next:focus .svg-icon {
  transform: scaleX(-1) translateX(-0.1875rem);
}

.slideshow--light-pagination .slideshow-pagination--pn .slideshow-pagination__button {
  height: 12.5rem;
  width: 3.125rem;
  background-color: rgba(255, 255, 255, 0.75);
  color: #1c222d;
}

.slideshow--light-pagination .slideshow-pagination--pn .slideshow-pagination__button:hover, .slideshow--light-pagination .slideshow-pagination--pn .slideshow-pagination__button:focus {
  background-color: rgba(255, 255, 255, 0.6);
  outline: none;
}

.slideshow--large-pagination .slideshow-pagination--pn .slideshow-pagination__button {
  height: 19.6875rem;
  width: 4.375rem;
  background: #fff;
}

.slideshow--large-pagination .slideshow-pagination--pn .slideshow-pagination__button:hover, .slideshow--large-pagination .slideshow-pagination--pn .slideshow-pagination__button:focus {
  background-color: rgba(255, 255, 255, 0.85);
  outline: none;
}

@keyframes slideshow-ai-before {
  99% {
    transform: scale(1);
    opacity: 0;
  }
  to {
    transform: scale(0);
    opacity: 0;
  }
}
/* ... */

